--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ number-problems
 selection-sort
 bubble-sort
 insertion-sort
+subArray-subSequence
+sum-of-all-sub-arrays
+prob1
+prob2
+prob3
+prob4
+prob5
