lots of questions done until dnf sort or 012 sort

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,13 @@ bubble-sort
 insertion-sort
 subArray-subSequence
 sum-of-all-sub-arrays
+vectors
+pair
+quicksort
+mergesort
+countsort
+dnf-sort
+reduce-an-array
 prob1
 prob2
 prob3
