--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,12 @@ prob39
 prob40
 linkedList
 doublyLinkedList
+master_theorm
+stackUsingArray
+reverseSentence
+reverseAStack
+evaluatePrefix
+evaluatePostfix
+infixToPostfix
+infixToPrefix
+balacedParenthesis
