done until finding peak value in array

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,7 @@ set
 multiset
 unorderedset
 placeElementToMaxMinDistance
+pageAllocationProblem
+painterPartitionProblem
+searchInSortedAndRotatedArray
+findPeakInArray
