done till formNumDivBy3

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,6 @@ pageAllocationProblem
 painterPartitionProblem
 searchInSortedAndRotatedArray
 findPeakInArray
+maxSumSubarray
+minSubarraySize
+formNumDivBy3
